Use Stream.toList in core.tests.resources